[workspace]
members = [
    "fvm",
    "sdk",
    "shared",
    "testing/conformance",
    "ipld/*",
]

[profile.actor]
inherits = "release"
panic = "abort"
overflow-checks = true
lto = true
opt-level = "z"
#strip = true

[patch.crates-io]
fvm_shared = { path = "./shared" }
fvm_ipld_car = { path = "./ipld/car" }
