[package]
name = "fil_nitro_adjudicator_actor"
version = "0.0.1"
edition = "2021"

[dependencies]
cid = { version = "0.8.4", default-features = false }
multihash = { version = "0.16.2", default-features = false }
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.2.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = "0.5"
anyhow = "1.0.56"
fvm_sdk = { version = "2.0.0-alpha.1", path = "../../../../sdk" }
fvm_shared = { version = "0.8.0", path = "../../../../shared" }

[build-dependencies]
wasm-builder = "3.0.1"
